working on cart page spacing issue

--- a/src/AllTheme/DaimondTine/Components/Pages/Wishlist/Wish2/dt_wishPageB2c.scss
+++ b/src/AllTheme/DaimondTine/Components/Pages/Wishlist/Wish2/dt_wishPageB2c.scss
@@ -242,6 +242,14 @@
   }
 }
 
+@media (max-width: 999px){
+  .dt_MainWishDiv {
+    .cart {
+      flex-direction: row;
+    }
+  }
+}
+
 @media (max-width: 1400px) {
   .dt_MainWishDiv {
     .cart {
